--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,10 @@
   <version>1.0-SNAPSHOT</version>
   <inceptionYear>2008</inceptionYear>
   <properties>
-    <scala.major.version>2.11</scala.major.version>
-    <scala.version>${scala.major.version}.0</scala.version>
+    <scala.major.version>2.12</scala.major.version>
+    <scala.version>${scala.major.version}.4</scala.version>
     <flink.version>1.9.2</flink.version>
+    <spark.version>2.4.6</spark.version>
   </properties>
 
   <repositories>
@@ -32,6 +33,21 @@
   </pluginRepositories>
 
   <dependencies>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-mllib_${scala.major.version}</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_${scala.major.version}</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_${scala.major.version}</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
